source/stylesheets/all.scss
@import 'bootstrap';

@charset "utf-8";

#photos .span4 {
  margin-left:10px;
  margin-bottom:10px;
  cursor:pointer;
}

#intro {
  background: #3a3531 url('/images/hnk-pattern.png');
  background-size:88px 100px;
  padding: 1.2em 0;
}

#nav {
  margin:0;
  padding:0;
  height:60px;

}

.navbar .nav li a {
  padding-top:12px;
}
.navbar-inner {
  border-radius:0;
}

.navbar .container {
  width:940px;
}

#navbar.affix {
    position: fixed;
    width: 100%;
    top:0;
    z-index: 5;
      border-radius:0;
  moz-border-radius:0;
  -webkit-border-radius:0;
}

.social-icon {
  display:inline-block;
  padding-right:20px;
  opacity:.4;
  padding: 4px 0px 2px;
}

.social-icon:hover{
  opacity:1;
}

#welcome, #photos, #videos, #organizers{
  background-color:#fff;
}

#welcome .container {
  border-bottom:1px solid #ccc;
}

#videos {

    h3{
      text-align:center;
    }
}

.video-details{
 width:80%;
 margin:auto;
 padding:1em;
 text-align:center;
}

body {
  font-family: "Bitter", "Arial", sans-serif; 
  color: rgba(0, 0, 0, .7);
}

section {
  float:left;
  width:100%;
  clear:both;
  padding-top:1em;
  padding-bottom:1em;
    h2{
      font-weight: bold;
      font-size: 2.5em;
      letter-spacing: -1px;
      padding: 1em 0 1em 0;
      text-align:center;
      color:rgb(226, 102, 0);
    }
}

.no-padding {
  padding:0;
}
.lower {
  text-transform: lowercase;
  font-size:20px;
  list-style-type:none;
  display:inline;

    a{

    }
}

#events {
    margin-top:44px;
    h3 {
      display:inline;
    }
    li { 
      font-size:1.25em;
      color:rgb(255,105,0);
      display:inline;
      text-decoration:none;
      a {
        padding:40px 0 40px 4px;
        color:#fff;
      }
    }
}


#about{
  padding-top:10px;
  font-size:1.25em;
  line-height:1.5em;
  text-align:center;
}

#newsletter {
  padding-top:20px;
  p {
    text-align:center;
    font-size:.9em;
  }
}

#photos{

    h2 {
      padding: .5em 0 .5em 0;
    }
}

#galleries {

    h3{
      font-size:18px;
      text-align:center;
    }

    img {
      border:1px solid #aaa;
      box-shadow:1px 1px 8px #aaa;
      -webkit-box-shadow:1px 1px 8px #aaa;
      -mozkit-box-shadow:1px 1px 8px #aaa;
    }
}
/*Videos */


#player {
  width:100%;
  position: relative;
  margin:auto;
}

.carousel-wrap{
  width:100%;
  overflow-x:scroll;
  overflow-y:hidden; 
  background-color:rgba(235,235,235,.5);

  -webkit-box-shadow: inset 1px 1px 8px #ccc; 
  -moz-box-shadow: inset 1px 1px 8px #ccc; 
  box-shadow: inset 1px 1px 8px #ccc;
  border:1px solid #ccc;
  padding-top:10px;
  margin-top:2em;
}


.youtube .thumbnail {
    width:  200px;
    cursor:pointer;
}

.thumb-container{
  width: 200px;
  display:inline-block;
  vertical-align:top;
  margin:20px;
  text-align:center;
  position:relative;
    img {
      box-shadow: 1px 1px 6px #888;
      -webkit-box-shadow: 1px 1px 6px #888;
      -moz-box-shadow: 1px 1px 6px #888;
      padding:0;
      margin:0;
    }
    .caption h3 {
      font-size:16px;
      padding:25px 10px 10px 10px;
      cursor:pointer;

    }
}
.thumbnail {
  border:1px solid #444;
  box-shadow: 1px 1px 3px #aaa;
  -webkit-box-shadow: 1px 1px 3px #aaa;
  -moz-box-shadow: 1px 1px 3px #aaa;
  padding:0;
}

.player {
    display:block;
    width: 100%;
    height: 450px;  
    overflow: auto;
    border:1px solid #444;
    box-shadow: 2px 2px 8px #888;
    -webkit-box-shadow: 2px 2px 8px #888;
    -moz-box-shadow: 2px 2px 8px #888
}

.yt-title {
    padding-top:10px;
    display:block;
    cursor:pointer;
    width: 200px;
}
.carItemContain{
    width:0;
    height:100px;
}

/*Flickr photos */
.gallery-img {
  position:relative;
}

/*Social*/

#social {
  margin-top:2em;
}

#social-links a {
  text-decoration:none;
}
#social-links {
  width:400px;
  margin:auto;
  text-align:center;
}

.organizer{
  float:left;
  width:33.33%;
  position:relative;
  cursor:pointer;
  overflow:hidden;
}

.organizer img{
  width:100%;
  height:100%;
  display:block;
}

.caption {
  position:absolute;
  top:0;
  left:0;
  display:none;
  background-color: rgba(0,0,0,.75);  
  height: 100%;  
  width: 100%;  
  pointer-events:none;

  /* For IE 5-7 */  
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);  
  /* For IE 8 */  
  -MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";  
  }  

.caption h3 {
  color:#fff;
  text-align:center;
  text-shadow:1px 1px 1px #222;
  padding-top:1em;
  font-size:1.5em;
}


#organizers {
 padding-bottom:4em;
}

/*Mail Chimp*/
#mc_embed_signup{
 
}

#mc_embed_signup input.email{
  display:inline-block;
}

#mc_embed_signup input.email:focus {
      box-shadow:none !important;
      color:#333;
    }

#mc_embed_signup .clear {
 
}

#mc_embed_signup form {

}

#mc_embed_signup input.button{
  display:inline-block;
  height:37px;
  border: 1px solid #aaa;
  background-color:#0088cc;
}

#mc_embed_signup input.button:hover{
  background-color:#00689C;
}

#mc_embed_signup input.button:focus {

}




#footer{

}

